--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "svelte-app",
+  "name": "wordle-together",
   "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "npx rollup -c",
+    "dev": "npx rollup -c -w",
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
@@ -26,8 +26,9 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "dotenv": "^14.2.0",
     "nanoid": "^3.1.32",
     "uwebsocket-serve": "^1.0.7",
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.3.0"
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.6.0"
   }
 }
