--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "dotenv": "^14.2.0",
+        "isbot": "^3.4.0",
         "nanoid": "^3.1.32",
         "uwebsocket-serve": "^1.0.7",
         "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.6.0"
